# tailscale_ocaml

./: .gitmodules
bindings/: dune  tailscale_bindings.ml
lib/: dune  tailscale.ml  tailscale.mli
